@@ -1,5 +1,9 @@
 2011-07-16    <Jim@X64PC>
 
+	* CPU/run.c (start_CP0_timer) [Ed Harcourt (edharcourt1)]:
+	Clean up non-Windows timer code to not reset timer until it has
+	expired. This behavior may have caused problems on Linux x64.
+
 	* QtSpim/console.cpp, QtSpim/console.h, QtStpim/spim_support.c [Merlin Hansen ( wasteofammo )]:
 	Memory mapped IO was not fully implemented.
 
